# shoelace

./: CONFIG.md  README.md  pyproject.toml
shoelace/: __init__.py  __main__.py  cli.py  config.py  initrd.py  kernel.py  qemu.py
shoelace/static_initrd/etc/: inittab
shoelace/static_initrd/etc/init.d/: rcS
shoelace/static_initrd/etc/rcS.d/: S00-mountpoints  S02-modules
testinit/: Makefile  testinit.c
